<resources>
    <string name="app_name">SomeCoinApp</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_followed">Followed</string>
    <string name="title_search">Search</string>
    <string name="cd_user_icon">Dummy User Icon</string>
    <string name="ph_user_name">John Smith</string>
    <string name="faq">FAQ</string>
    <string name="logs">Logs</string>
    <string name="exit_app">Exit App</string>
    <string name="ok">OK</string>
    <string name="title_listing">Top Coins</string>
    <string name="rank">Rank</string>
    <string name="symbol">Sym</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="cd_iv_pricechange_arrow">Indicator for price change</string>
    <string name="network_not_available">Network not available. Fetching cached data</string>
    <string name="detail_price_label">Price:</string>
    <string name="detail_market_cap_label">Market Cap: </string>
    <string name="detail_1hr_change_label">1hr</string>
    <string name="detail_24hr_change_label">24hr</string>
    <string name="detail_7d_change_label">7d</string>
    <string name="change">Change</string>
    <string name="symbol_fullname">Symbol</string>
    <string name="supply">Supply</string>
    <string name="maximum">Maximum:</string>
    <string name="circulating">Circulating:</string>
    <string name="total">Total:</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="clear_followed">Clear Followed</string>
    <string name="selector_for_follow_unfollow">Selector for Follow/Unfollow</string>
    <string name="search_coins">Search Coins</string>
    <string name="search_button">Search button</string>
    <string name="dismiss">Dismiss</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="no_logs_message">No Logs Yet</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, has no ocurreret constituto quaerendum, sea natum labore ne. Oratio everti honestatis per ex, sit ut luptatum disputando. Pro quando reformidans in. Mel delicata volutpat omittantur ei, munere honestatis vis et, at eum oblique iudicabit complectitur. Vel no malis insolens, per clita tempor ponderum ut. Meis justo scribentur an his, everti necessitatibus vim an. Modus dolor et pro, ex mei convenire voluptatum reprehendunt, electram sententiae eu vel. No sea alii tacimates sensibus. Decore accumsan interpretaris nec ut. Vis posse utamur ex, vis ad aliquid commune constituam. Te mutat offendit sit, vis maiorum iracundia ex. Cum in graecis tibique. Ea essent similique sed, diam facilisis omittantur eu vis, nominati abhorreant et vel. Eum partem invidunt voluptaria ad, ex aeterno verterem eum. Ea vim scaevola prodesset necessitatibus. Duo nulla malorum eu. Mea eros accusam tincidunt ea, sit porro possit omnesque no, an sea legimus veritus nostrum. Eius maluisset vix no. Eam cu sint ludus utinam. Graecis fuisset disputationi qui cu, vim propriae lucilius reprehendunt eu. Eam ex partem debitis atomorum, per ea tota meis ipsum, tamquam instructior ut quo. Quo eu justo tritani convenire, probo fuisset splendide no mea. Qui id dicta malorum admodum. Nec eu clita invidunt quaestio, sit sint tempor malorum no, mea mazim prompta senserit ei. Eos an molestiae pertinacia. Ne vix vide fugit luptatum, interesset cotidieque mea ei. Quo no movet graecis ocurreret, dicta dolores interpretaris ius an. Et mutat doming aperiam sit, sea aeque gubergren liberavisse et, ne quaeque quaestio nec.</string>
</resources>
